tests/ui/consts/const-eval/unwind-abort.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
  ::: $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: the evaluated program panicked at 'explicit panic', $DIR/unwind-abort.rs:4:5
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
   |
  ::: $DIR/unwind-abort.rs:4:5
   |
LL |     panic!()
   |     --------
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
   |
note: inside `foo`
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
   |
  ::: $DIR/unwind-abort.rs:4:5
   |
LL |     panic!()
   |     --------
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
note: inside `_`
  --> $DIR/unwind-abort.rs:7:15
   |
LL | const _: () = foo();
   |               ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
